--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -10,13 +10,14 @@
 // 모바일 기기 회전시에 사용자가 확대하지 않아도 글씨 크기가 재조정되는 것을 예방.
 body {
   font-family: $font-family-m;
+  font-size: $font-size-s;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 
 // headings
 h1, h2, h3, h4, h5, h6 {
-  font-family: inherit;
+  font-family: $font-family-m;
   font-weight: $headings-font-weight;
   line-height: $headings-line-height;
   color: $headings-font-color;
@@ -39,7 +40,7 @@ h5 {
   font-size: $h5-font-size;
 }
 h6 {
-  font-family: 'Malgun Gothic'; // h6 만 기본 값이 맑은 고딕.
+  font-family: $font-family-s;
   font-size: $h6-font-size;
 }
 // a
