itsm 헤더, 메인, 컨텐츠 z- prefix 추가

--- a/src/main/resources/public/scss/document/_variables.scss
+++ b/src/main/resources/public/scss/document/_variables.scss
@@ -3,7 +3,7 @@
 $layout-header-height:                       0; // 0px
 
 // main
-$layout-main-bg-color:                       map-get($grays, 'light');
+$layout-main-bg-color:                       $neutral50;
 
 // main > drawing-board
 $drawing-board-width:                        60rem; // 960px
