--- a/src/main/resources/public/scss/theme/default/_reply.scss
+++ b/src/main/resources/public/scss/theme/default/_reply.scss
@@ -57,7 +57,7 @@
     flex : none;
     margin: auto 0.9376rem auto 0; // 15px
     @include borderRadius(50%);
-    background-color: $profile-photo-background;
+    background-color: $element-icon-color;
   }
 
   // 버튼
