--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -4,6 +4,19 @@ $image-folder-path:                           '../media/images/';
 $tree-folder-path:                            '../../../media/icons/tree';
 
 ////////////////////////////// Layout //////////////////////////////
+// Main
+$layout-main-bg-color:                        $neutral50;
+// Main > Header
+$layout-main-header-border-width:             0.0625rem;  // 1px
+$layout-main-header-border-color:             $gray300;
+$layout-main-header-bg-color:                 $neutral50;
+
+// Content
+$layout-content-bg-color:                     $neutral50;
+
+// Aside
+$layout-aside-bg-color:                       $white;
+
 // Logo
 $logo-width:                                  13.75rem; // 220px
 $logo-height:                                 3.375rem; // 54px
@@ -70,16 +83,6 @@ $icon-gnb-sub-dot:                            $icon-folder-path + 'gnb/icon_gnb_
 $icon-menu-arrow-right:                       $icon-folder-path + 'icon_menu_arrow_right.svg';
 $icon-menu-arrow-bottom:                      $icon-folder-path + 'icon_menu_arrow_bottom.svg';
 
-// Profile
-$profile-photo-size:                          2rem; // 16px
-$profile-photo-background:                    #F0F0F0;
-
-// Document color icon
-$document-color-size:                         1rem; // 16px
-
-// 헤더
-$layout-header-border:                        0.0625rem solid map-get($grays, 'line'); // 1px
-
 ////////////////////////////// View //////////////////////////////
 $view-title-font-size:                        1.125rem; // 18px
 $view-title-font-weight:                      $font-weight-medium;
@@ -92,6 +95,14 @@ $view-sub-title-font-color:                   map-get($grays, 'dark');
 $view-content-font-size:                      $font-size-s; // 16px
 $view-content-font-weight:                    $font-weight-regular;
 $view-content-font-color:                     map-get($grays, 'dark');
+
+$view-content-bg-color:                       $white;
+$view-content-border-width:                   0.0625rem;  // 1px
+$view-content-border-color:                   $gray300;
+////////////////////////////// Edit //////////////////////////////
+$edit-content-bg-color:                       $white;
+$edit-content-border-width:                   0.0625rem;  // 1px
+$edit-content-border-color:                   $gray300;
 
 ////////////////////////////// 리스트 //////////////////////////////
 // 리스트 - 마우스 오버시
@@ -107,7 +118,11 @@ $list-active-bg-color:                        hexToRGBA(#e6e8eb, 0.6);
 // 공지사항 상단 공지 (배경색 별도 처리)
 $notice-pinned-color:                         hexToRGBA(map-get($blues, 'light'), 0.15);
 
+// Document color icon
+$document-color-size:                         1rem; // 16px
+
 ////////////////////////////// 카드 //////////////////////////////
+$card-content-bg-color:                       $white;
 $card-border-width:                           0.0625rem; // 1px
 $card-border-color:                           map-get($grays, 'line');
 $card-border:                                 $card-border-width solid $card-border-color;
