--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="custom-code-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-custom-code-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{customCode.label.customCode}"></h1>
             <h6 class="description ml-2" th:text="#{customCode.msg.editDescription}"></h6>
         </div>
@@ -17,7 +17,7 @@
 </th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit">
-        <div class="custom-code-content-edit">
+        <div class="z-custom-code-content-edit">
             <div class="flex-column z-edit-row">
                 <label for="customCodeName">
                     <span th:text="#{customCode.label.name}"></span>
