--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="scheduler-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-scheduler-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{scheduler.label.schedule}"></h1>
             <h6 class="description ml-2" th:text="#{scheduler.msg.scheduleDescription}"></h6>
         </div>
@@ -17,7 +17,7 @@
 </th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit hidden-scroll">
-        <div class="scheduler-content-edit">
+        <div class="z-scheduler-content-edit">
             <div class="flex-column z-edit-row">
                 <label for="taskName">
                     <span th:text="#{scheduler.label.name}"></span>
