--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -67,13 +67,13 @@
 }
 
 // itsm 디자인
-@mixin defaultHeader {
+@mixin defaultMainHeader {
   // 제목
-  .header-title {
+  .#{$common-prefix}main-header-title {
     padding: 0 0 1.563rem 0; // 0 0px 25px 0px
   }
   // 검색 영역
-  .header-search {
+  .#{$common-prefix}main-header-search {
     font-family: $layout-header-search-font-family;
     font-size: $layout-header-search-font-size;
     padding: 0.3125rem 0px 1.25rem 0px; // 5px 0px 20px 0px
