--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="auth-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-auth-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{auth.label.auth}"></h1>
             <h6 class="description ml-2" th:text="#{auth.msg.editDescription}"></h6>
         </div>
-        <div class="header-search flex-row">
+        <div class="z-main-header-search flex-row">
             <input type="text" class="z-input i-search col-5 mr-2" id="search" name="search"  maxlength="100"
                    th:placeholder="#{auth.msg.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
@@ -25,7 +25,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="auth-content flex-fill">
+    <div class="z-auth-content flex-fill">
         <div class="list" id="authList"></div>
     </div>
 </th:block>
