--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="board-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-board-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{board.label.board}"></h1>
             <h6 class="description ml-2" th:text="#{board.msg.viewDescription}"></h6>
         </div>
@@ -17,7 +17,7 @@
 </th:block>
 <th:block layout:fragment="content">
     <div class="flex-column view">
-        <div class="board-content-view">
+        <div class="z-board-content-view">
             <div class="flex-column view-row">
                 <div class="view-title text-ellipsis">
                     <span th:if="${boardAdminInfo.categoryYn}" th:text="'['+${boardInfo?.boardCategoryName}+']'"></span>
