--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="board-admin-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-board-admin-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{board.label.board}"></h1>
             <h6 class="description ml-2" th:text="#{board.msg.adminViewDescription}"></h6>
         </div>
@@ -16,7 +16,7 @@
 </th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit">
-        <div class="board-admin-content-edit">
+        <div class="z-board-admin-content-edit">
             <div class="flex-column z-edit-row">
                 <label for="boardAdminTitle">
                     <span th:text="#{board.label.name}"></span>
