--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="chart-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-chart-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{chart.label.chartList}"></h1>
             <h6 class="description ml-2" th:text="#{chart.msg.searchDescription}"></h6>
         </div>
-        <div class="header-search flex-row">
+        <div class="z-main-header-search flex-row">
             <input type="hidden" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
                    th:name="isRole" th:value="true"/>
             <input type="hidden" sec:authorize="!hasAuthority('chart.create') && !hasAuthority('chart.update')"
@@ -33,7 +33,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="chart-content flex-fill">
+    <div class="z-chart-content flex-fill">
         <input type="hidden" id="deletable" th:value="${#authorization.expression('hasAuthority(''chart.delete'')')}"/>
         <div class="list" id="chartList"></div>
     </div>
