--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="cmdb-ci-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-cmdb-ci-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{cmdb.ci.label.ciInquiry}"></h1>
             <h6 class="description ml-2" th:text="#{cmdb.ci.msg.searchDescription}"></h6>
         </div>
-        <div class="header-search flex-row">
+        <div class="z-main-header-search flex-row">
             <input type="hidden" sec:authorize="hasAuthority('cmdb.ci.create') || hasAuthority('cmdb.ci.update')"
                    th:name="isRole" th:value="true"/>
             <input type="hidden" sec:authorize="!hasAuthority('cmdb.ci.create') && !hasAuthority('cmdb.ci.update')"
@@ -30,7 +30,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="cmdb-ci-content flex-fill">
+    <div class="z-cmdb-ci-content flex-fill">
         <div class="list" id="ciList"></div>
     </div>
 </th:block>
