--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="code-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-code-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{code.label.code}"></h1>
             <h6 class="description ml-2" th:text="#{code.msg.editDescription}"></h6>
         </div>
-        <div class="header-search flex-row">
+        <div class="z-main-header-search flex-row">
             <input type="text" class="z-input i-search col-5 mr-2" id="search" name="search" maxlength="100"
                    th:placeholder="#{code.label.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
@@ -25,7 +25,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="code-content flex-fill">
+    <div class="z-code-content flex-fill">
         <div class="list-tree">
             <div id="treeList"></div>
         </div>
@@ -33,7 +33,7 @@
 </th:block>
 <th:block layout:fragment="aside">
     <div class="z-aside code">
-        <div class="code-content-edit flex-column">
+        <div class="z-code-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-row">
                     <div class="edit-column flex-column flex-fill mr-4">
