--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="dashboard-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-dashboard-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{token.label.list}"></h1>
             <h6 class="description ml-2" th:text="#{dashboard.msg.viewDescription}"></h6>
         </div>
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="dashboard-content flex-fill">
+    <div class="z-dashboard-content flex-fill">
         <h3 class="sub-title">업무통계</h3>
         <div id="statistic" class="flex-row">
             <div class="statistic-box flex-row align-items-center mr-4">
