--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -83,11 +83,11 @@
                         if (aliceJs.isEnableScrollEvent(offsetCount)) {
                             offsetCount = offsetCount + aliceJs.searchDataCount;
                         }
-                        document.querySelector('.document-content .card-list').insertAdjacentHTML('beforeend', response.responseText);
+                        document.querySelector('.z-document-content .card-list').insertAdjacentHTML('beforeend', response.responseText);
                     } else {
                         document.getElementById('documentList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        OverlayScrollbars(document.querySelector('.document-content'), {
+                        OverlayScrollbars(document.querySelector('.z-document-content'), {
                             className: 'scrollbar',
                             callbacks: {
                                 onScroll: function(e) {
@@ -120,12 +120,12 @@
 </th:block>
 <body>
 <th:block layout:fragment="head">
-    <div class="document-header">
-        <div class="header-title flex-row align-items-baseline" id="header-title">
+    <div class="z-document-header">
+        <div class="z-main-header-title flex-row align-items-baseline" id="header-title">
             <h1 th:text="#{document.label.document}"></h1>
             <h6 class="description ml-2" th:text="#{document.msg.searchDescription}"></h6>
         </div>
-        <div class="header-search flex-row" id="header-search">
+        <div class="z-main-header-search flex-row" id="header-search">
             <form id="searchDocumentsFrm">
                 <input type="text" id="searchDocuments" name="searchDocuments" maxlength="100"
                        th:placeholder="#{document.label.searchPlaceholder}" class="z-input i-search col-3"/>
@@ -141,7 +141,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="document-content flex-fill">
+    <div class="z-document-content flex-fill">
         <input type="hidden" sec:authorize="hasAuthority('document.create')" th:name="isRole" th:value="true"/>
         <input type="hidden" sec:authorize="!hasAuthority('document.create')" th:name="isRole" th:value="false"/>
         <div id="documentList"></div>
