--- a/src/main/resources/public/template/download/downloadEdit.html
+++ b/src/main/resources/public/template/download/downloadEdit.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="download-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-download-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{download.label.download}"></h1>
             <h6 class="description ml-2" th:text="#{download.msg.editDescription}"></h6>
         </div>
@@ -16,7 +16,7 @@
 </th:block>
 <th:block layout:fragment="content">
     <div class="flex-column z-edit">
-        <div class="download-content-edit">
+        <div class="z-download-content-edit">
             <div class="flex-column z-edit-row">
                 <label for="downloadCategory">
                     <span th:text="#{download.label.category}"></span>
