--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="faq-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-faq-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{faq.label.faq}"></h1>
             <h6 class="description ml-2" th:text="#{faq.msg.viewDescription}"></h6>
         </div>
@@ -17,7 +17,7 @@
 </th:block>
 <th:block layout:fragment="content">
     <div class="flex-column view">
-        <div class="faq-content-view">
+        <div class="z-faq-content-view">
             <div class="flex-column view-row">
                 <div class="view-title text-ellipsis" th:text="${faq?.faqTitle}"></div>
             </div>
