--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="notice-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-notice-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{notice.label.notice}"></h1>
             <h6 class="description ml-2" th:text="#{notice.msg.searchDescription}"></h6>
         </div>
-        <div class="header-search flex-row">
+        <div class="z-main-header-search flex-row">
             <input type="hidden" name="isRole" sec:authorize="hasAuthority('notice.update')" th:value="true"/>
             <input type="hidden" name="isRole" sec:authorize="!hasAuthority('notice.update')" th:value="false"/>
             <form id="searchFrm">
@@ -33,7 +33,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="notice-content flex-fill">
+    <div class="z-notice-content flex-fill">
         <div class="list" id="noticeList"></div>
     </div>
 </th:block>
