--- a/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="numbering-pattern-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-numbering-pattern-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{pattern.label.pattern}"></h1>
             <h6 class="description ml-2" th:text="#{pattern.msg.editDescription}"></h6>
         </div>
-        <div class="header-search flex-row">
+        <div class="z-main-header-search flex-row">
             <input type="text" class="z-input i-search col-5 mr-2" id="search" name="search" maxlength="100"
                    th:placeholder="#{pattern.msg.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
@@ -25,13 +25,13 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="numbering-pattern-content flex-fill">
+    <div class="z-numbering-pattern-content flex-fill">
         <div class="list" id="patternList"></div>
     </div>
 </th:block>
 <th:block layout:fragment="aside">
     <div class="z-aside">
-        <div class="numbering-pattern-content-edit flex-column">
+        <div class="z-numbering-pattern-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-column">
                     <label th:text="#{pattern.label.name}" class="required"></label>
