--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="role-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-role-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{role.label.role}"></h1>
             <h6 class="description ml-2" th:text="#{role.msg.editDescription}"></h6>
         </div>
-        <div class="header-search flex-row">
+        <div class="z-main-header-search flex-row">
             <input type="text" class="z-input i-search col-5 mr-2" id="search" name="search" maxlength="100" th:placeholder="#{role.msg.searchPlaceholder}"/>
             <span id="totalCount" class="search-count"></span>
             <div class="ml-auto">
@@ -24,13 +24,13 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="role-content flex-fill">
+    <div class="z-role-content flex-fill">
         <div class="list" id="roleList"></div>
     </div>
 </th:block>
 <th:block layout:fragment="aside">
     <div class="z-aside">
-        <div class="role-content-edit flex-column">
+        <div class="z-role-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-column">
                     <label th:text="#{role.label.id}" class="required"></label>
