--- a/src/main/resources/public/template/scheduler/schedulerSearch.html
+++ b/src/main/resources/public/template/scheduler/schedulerSearch.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="board-admin-header">
-        <div class="header-title flex-row align-items-baseline">
+    <div class="z-board-admin-header">
+        <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{scheduler.label.scheduler}"></h1>
             <h6 class="description ml-2" th:text="#{scheduler.msg.searchDescription}"></h6>
         </div>
-        <div class="header-search flex-row">
+        <div class="z-main-header-search flex-row">
             <input type="hidden" sec:authorize="hasAuthority('scheduler.create') || hasAuthority('scheduler.update')"
                    th:name="isRole" th:value="true"/>
             <input type="hidden" sec:authorize="!hasAuthority('scheduler.create') && !hasAuthority('scheduler.update')"
@@ -31,7 +31,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="board-admin-content flex-fill">
+    <div class="z-board-admin-content flex-fill">
         <div class="list" id="schedulerList"></div>
     </div>
 </th:block>
