--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <th:block layout:fragment="head">
-    <div class="token-header">
-        <div class="header-title flex-row align-items-baseline" id="header-title">
+    <div class="z-token-header">
+        <div class="z-main-header-title flex-row align-items-baseline" id="header-title">
             <h1 th:text="#{token.label.list}"></h1>
             <h6 class="description ml-2" th:text="#{token.msg.searchDescription}"></h6>
         </div>
-        <div class="header-search flex-row" id="header-search">
+        <div class="z-main-header-search flex-row" id="header-search">
             <form id="frmSearch">
                 <select class="col-3" name="searchTokenType" id="searchTokenType">
                     <option value="token.type.todo" th:text="#{token.type.todo}" selected></option>
@@ -39,7 +39,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="token-content flex-fill">
+    <div class="z-token-content flex-fill">
         <input type="hidden" sec:authorize="hasAuthority('token.read')" th:name="isRole" th:value="true"/>
         <input type="hidden" sec:authorize="!hasAuthority('token.read')" th:name="isRole" th:value="false"/>
         <div id="tokenList"></div>
@@ -145,12 +145,12 @@
                         let tempDiv = document.createElement('div');
                         tempDiv.innerHTML = response.responseText;
                         setDateTimeFormat(tempDiv);
-                        document.querySelector('.token-content .card-list').insertAdjacentHTML('beforeend', tempDiv.innerHTML);
+                        document.querySelector('.z-token-content .card-list').insertAdjacentHTML('beforeend', tempDiv.innerHTML);
                     } else {
                         document.getElementById('tokenList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
                         setDateTimeFormat(document.getElementById('tokenList'));
-                        OverlayScrollbars(document.querySelector('.token-content'), {
+                        OverlayScrollbars(document.querySelector('.z-token-content'), {
                             className: 'scrollbar',
                             callbacks: {
                                 onScroll: function (e) {
