--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -6087,7 +6087,7 @@ body.modal-active {
  *
  * 파일 경로 : template/_thumbnail.scss
  * @description 썸네일 디자인
- * @author jy.lim
+ * @author Woo Da Jung <wdj@brainz.co.kr>
  * @version 1.0
  */
 .thumbnail-main {
